<resources>
    <string name="app_name">lugares</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name_placeholder">Nombre del lugar ...</string>
    <string name="create_place">Agregar lugar</string>
    <string name="update_place">Actualizar lugar</string>

    <string name="msg_lugar_added">El lugar ha sido agregado</string>
    <string name="msg_lugar_updated">El lugar ha sido actualizado</string>
    <string name="msg_error">No se agregó el lugar</string>

    <string name="menu_delete">Borrar</string>

    <string name="deleted">Borrado</string>

    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="seguroBorrar">Seguro que desea borrar</string>

    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="altura">Altura</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_datos">No hay datos</string>
    <string name="msg_saludos">Hola</string>
    <string name="msg_mensaje_correo">Saludos</string>
    <string name="error">n/a</string>
</resources>