<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLugarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/lugarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name_placeholder" />

        <Button
            android:id="@+id/finalAddLugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_place" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="25sp"
            android:padding="10sp"
            tools:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_latitud1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitud"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_longitud1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitud"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_altura1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/altura"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_latitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_longitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</FrameLayout>